# TIL

./: .gitignore  LICENSE  README.md
AI/slm_practice/: .gitignore  LLM 보안 이슈.md  logs.txt  pyproject.toml
AI/slm_practice/bad_content_detection/: bad_content_detection.ipynb  bad_content_detection_kor.ipynb  lime_tree.ipynb  lime_tree_kor.ipynb  nltk_exam.ipynb  prepare_dataset.ipynb  불용어,비속어 처리.md
AI/slm_practice/dataset/: ai_hub_dataset.ipynb
AI/slm_practice/fine_tuning_exam/: LoRA_exam.ipynb  P-tuning_exam.ipynb  datafile.jsonl  datafile_no_siglequotes.jsonl  fine_tuning_classification_exam.ipynb  fine_tuning_exam.ipynb  peft_prefix_tuning.ipynb  prompt_tuning_exam.ipynb  result.csv  sport2_prepared_train_drop.jsonl  sport2_prepared_valid_drop.jsonl  transformer_pipeline_exam.ipynb
AI/slm_practice/gemma_exam/: gemma-rag.ipynb  gemma2-9b.ipynb  gemma_quantization.ipynb  ko_eval.ipynb  lm-eval.ipynb  visual_wandb.ipynb
AI/slm_practice/gpt_dataset/: azure_gpt.ipynb
AI/slm_practice/hugginface_exam/: env_setting.py  huggingface_exam.ipynb  sample1.flac  tts_to_flac.py
AI/slm_practice/langchain_exam/: langchain_exam.ipynb
AI/slm_practice/llm_security/: llm_guard.ipynb  llm_security_solution.ipynb  whylabs_security.ipynb
AI/slm_practice/mixtral_exam/: code_gen.ipynb  mergekit.ipynb  mixtral-8x7b-for-web-qa.ipynb  mixtral-8x7b-mixture-of-experts.ipynb  mixtral-dpo.ipynb  mixtral_ai.ipynb
AI/slm_practice/ollama_exam/: app.py  ollama_exam.ipynb  rag.py
AI/slm_practice/ollama_rag_ui/: ollama_rag_ui.ipynb
AI/slm_practice/phi3_exam/: fine_tuning.ipynb  (+7 more)
(+873 files in other folders)
