[tool.poetry]
name = "slm-practice"
version = "0.1.0"
description = ""
authors = ["wonik-jo <jowonik@hikive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyter = "^1.1.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
sentencepiece = "^0.2.0"
transformers = "4.46.0"
tensorflow = "^2.18.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
gtts = "^2.5.4"
pydub = "^0.25.1"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-community = "^0.3.13"
streamlit = "1.11.1"
chromadb = "^0.5.23"
streamlit-chat = "^0.1.1"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
